[tool.poetry]

name = "SCIMAP"
version = "2.2.6"
description = "Spatial Single-Cell Analysis Toolkit"

license = "MIT"

authors = ["Ajit Johnson Nirmal <ajitjohnson.n@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/scimap/"
documentation = "https://scimap.xyz"
repository = "https://github.com/labsyspharm/scimap"

keywords = ["image analysis","multiplex imaging","single cell analysis"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

exclude = ["docs"]

[tool.poetry.dependencies]

python = ">=3.9,<3.13"
pytest = "^7.4.3"
anndata = "^0.10.5.post1"
pandas = "^2.1.3"
scipy = ">1.11.3,<=1.12.0"
seaborn = "^0.13.2"
tifffile = "^2023.9.26"
numpy = "^1.26.2"
pytest-xvfb = "^3.0.0"
matplotlib = "^3.8.1"
PhenoGraph = "^1.5.7"
scanpy = "^1.9.6"
mkdocs = "^1.5.3"
plotly = "^5.18.0"
TiffFile = "^2023.9.26"
dask = {extras = ["array"], version = "^2023.11.0"}
zarr = "2.10.3"
napari = {version = "^0.4.18", optional = true}
numba = ">=0.58.1"
shapely = "^2.0.2"
gensim = "^4.3.2"
mkdocs-material = "^9.4.8"
napari-ome-zarr = {version = "^0.4.0", optional = true}
llvmlite = "^0.41.1"
combat = "^0.3.3"
mpl-scatter-density = "^0.7"
pyqt6 = {version = "^6.6.1", optional = true}
scikit-learn = "^1.4.2"

[tool.poetry.extras]
napari = ["pyqt6", "napari-ome-zarr", "napari"]

[tool.poetry.dev-dependencies]

# Formatters
black = "24.3.0"
isort = "4.3.21"

# Linters
mypy = "^1.7.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.2"

# Testing
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "^3.0"
pytest-random = "^0.02"
freezegun = "^1.2.2"


# Documentation
mkdocs = "^1.5.3"
pygments = "^2.16.1"

# Tooling
pyinstaller = "^6.2.0"
sniffer = "^0.4.1"
MacFSEvents = { version = "^0.8.4", platform = "darwin" }
pync = { version = "^2.0.3", platform = "darwin" }
ipython = "^8.17.2"

[tool.poetry.scripts]

scimap-mcmicro = "scimap.cli._scimap_mcmicro:mcmicro_wrap"
scimap-clustering = "scimap.cli._scimap_mcmicro:clustering"
scimap-merge-h5ad = "scimap.cli._scimap_mcmicro:merge"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"
requires = ["poetry-core"]
#requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
